# electronic_structure

./: CMakeLists.txt  README.md  main.cpp
Molecule_Files/: CH4.txt  CO.txt  Ethanol.txt  H2.txt  H2O.txt  H3.txt  HF.txt  HeH.txt  LiH.txt  N2.txt  PH3.txt
include/: STO3G_data.h  basis_function.h  contracted_integrals.h  integrals.h  scf.h  xyzfile_reader.h
src/: basis_function.cpp  contracted_integrals.cpp  integrals.cpp  scf.cpp  xyzfile_reader.cpp
